fix size of congratulation message on mobile devices, fix size of cheat button

--- a/styles/goll-brown.css
+++ b/styles/goll-brown.css
@@ -86,3 +86,16 @@ ul li a:active {
         font-size: 5vh;
     }
 }
+
+@media only screen and (orientation: portrait) {
+    @keyframes congratulations-grow {
+        from {
+            background-color: rgba(51,0,0,0);
+            font-size:0vh;
+        }
+        to {
+            background-color: rgba(51,0,0,.85);
+            font-size: 6vh;
+        }
+    }
+}
