--- a/styles/goll-rosa.css
+++ b/styles/goll-rosa.css
@@ -96,3 +96,16 @@ ul li a:active {
         font-size: 5vh;
     }
 }
+
+@media only screen and (orientation: portrait) {
+    @keyframes congratulations-grow {
+        from {
+            background-color: rgba(255,51,255,0);
+            font-size:0vh;
+        }
+        to {
+            background-color: rgba(255,51,255, .85);
+            font-size: 6vh;
+        }
+    }
+}
